KotlinDemoGithubProject/app/src/main/java/com/example/kotlindemogithubproject/http/error/UnauthorizedError.kt
package com.example.kotlindemogithubproject.http.error


class UnauthorizedError : HttpError(HttpErrorCode.UNAUTHORIZED)
